package gptui.core.ai.gcp;

public interface GcpApi {
    String send(String content, Integer temperature);
}
