@startuml
hide empty members
left to right direction

title QuestionModel interface

interface QuestionModel {
    requestAnswer()
}
interface StorageModel {
    readInteraction()
    getTheme()
    updateInteraction()
}
interface PromptFactory {
    getPrompt()
}
interface GptApi {
    send()
}
interface GcpApi {
    send()
}
interface SoundService {
    beenOnAnswer()
}
interface FormatConverter {
    markdownToHtml()
}

QuestionModel --> StorageModel
QuestionModel --> PromptFactory
QuestionModel --> GptApi
QuestionModel --> GcpApi
QuestionModel --> SoundService
QuestionModel --> FormatConverter

@enduml